[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-allmi-hiab-mcp"
version = "1.0.0"
description = "UK lorry-loader (hiab) compliance — ALLMI ACoP, BS 7121-4 lift planning, LOLER Thorough Examination, CPCS A36 / A40 / A73, brick-grab POD, contract-lift triage. For builders' merchants + specialist hiab operators. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "hiab", "allmi", "bs7121-4", "lorry-loader", "brick-grab", "cpcs-a36", "slinger", "signaller", "builders-merchant", "loler", "thorough-examination", "epod", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-allmi-hiab-mcp"

[project.scripts]
meok-allmi-hiab-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_Configs = true
disallow_untyped_defs = true

